<resources>
    <string name="camera_error_title">Camera error</string>
    <string name="cannot_connect_camera">Cannot connect to camera.</string>
    <string name="camera_application_stopped">Camera Stopped</string>
    <string name="camera_driver_needs_reset">Camera has stopped unexpectedly,need to restart.</string>
    <string name="camera_label">Camera</string>
    <string name="video_camera_label">Camcorder</string>
    <string name="gallery_camera_bucket_name">Camera pictures</string>
    <string name="gallery_camera_videos_bucket_name">Camera videos</string>
    <string name="wait">Please wait…</string>
    <string name="no_storage">Please insert an SD card before using the camera.</string>
    <string name="not_enough_space">Your SD card is full.</string>
    <string name="preparing_sd">Preparing SD card…</string>
    <string name="access_sd_fail">Fail to access SD card.</string>
    <string name="confirm_restore_title">Restore defaults</string>
    <string name="confirm_restore_message">Camera settings will be restored to defaults.</string>
    <string name="review_play">Play</string>
    <string name="review_cancel">Cancel</string>
    <string name="review_ok">OK</string>
    <string name="review_retake">Retake</string>
    <string name="pref_camera_id_title">Select camera</string>
    <string name="pref_camera_id_default">0</string>
    <string name="pref_camera_id_entry_back">Back</string>
    <string name="pref_camera_id_entry_front">Front</string>
    <string name="pref_camera_videosize_default">1280x720</string>
    <string name="pref_video_quality_default">5</string>
    <string name="pref_camera_videosize_title">Video size</string>
    <string name="pref_camera_videosize_entry_0">Full HD(1920x1080)</string>
    <string name="pref_camera_videosize_entry_1">HD(1280x720)</string>
    <string name="pref_camera_videosize_entry_2">qHD(960x540)</string>
    <string name="pref_camera_videosize_entry_3">VGA(640x480)</string>
    <string name="pref_camera_videosize_entry_4">QVGA(320x240)</string>
    <string name="pref_camera_videosize_entry_5">MMS(176x144)</string>
    <string name="pref_video_quality_title">Video quality</string>
    <string name="pref_video_quality_level_default">superfine</string>
    <string name="pref_camera_videoencoder_default">h264</string>
    <string name="pref_camera_audioencoder_default">aac</string>
    <string name="pref_camera_video_duration_default">10</string>
    <string name="pref_camera_settings_category">Camera settings</string>
    <string name="pref_camcorder_settings_category">Camcorder settings</string>
    <string name="pref_camera_picturesize_title">Picture size</string>
    <string name="pref_camera_picturesize_entry_4000x3000">12 MB (4000 x 3000)</string>
    <string name="pref_camera_picturesize_entry_3264x2448">8 MB (3264 x 2448)</string>
    <string name="pref_camera_picturesize_entry_3264x1836">8 MB (3264 x 1836)</string>
    <string name="pref_camera_picturesize_entry_3264x1840">8 MB (3264 x 1840)</string>
    <string name="pref_camera_picturesize_entry_2592x1944">5 MB (2592 x 1944)</string>
    <string name="pref_camera_picturesize_entry_2592x1952">5 MB (2592 x 1952)</string>
    <string name="pref_camera_picturesize_entry_2592x1456">5 MB (2592 x 1456)</string>
    <string name="pref_camera_picturesize_entry_2592x1458">5 MB (2592 x 1458)</string>
    <string name="pref_camera_picturesize_entry_2048x1536">3 MB (2048 x 1536)</string>
    <string name="pref_camera_picturesize_entry_2048x1152">3 MB (2048 x 1152)</string>
    <string name="pref_camera_picturesize_entry_1280x960">1.3 MB (1280 x 960)</string>
    <string name="pref_camera_picturesize_entry_1280x720">1.3 MB (1280 x 720)</string>
    <string name="pref_camera_picturesize_entry_1024x768">1 MB (1024 x 768)</string>
    <string name="pref_camera_picturesize_entry_640x480">0.3 MB (640 x 480)</string>
    <string name="pref_camera_picturesize_entry_640x360">0.3 MB (640 x 360)</string>
    <string name="pref_camera_picturesize_entry_320x240">320x240</string>
    <string name="pref_camera_picturesize_entry_160x120">160x120</string>
    <string name="pref_camera_widescreen_default">on</string>
    <string name="pref_picturesize_camera_widescreen_title">Wide Screen picture size</string>
    <string name="pref_camera_jpegquality_default">superfine</string>
    <string name="pref_camera_picture_format_default">jpeg</string>
    <string name="pref_camera_jpegquality_title">Picture quality</string>
    <string name="pref_camera_jpegquality_entry_superfine">Super fine</string>
    <string name="pref_camera_jpegquality_entry_fine">Fine</string>
    <string name="pref_camera_jpegquality_entry_normal">Normal</string>
    <string name="pref_camera_focusmode_default">continuous-picture</string>
    <string name="pref_camera_flashmode_default">auto</string>
    <string name="pref_camera_flashmode_no_flash">no_flash</string>
    <string name="pref_camera_flashmode_title">Flash mode</string>
    <string name="pref_camera_flashmode_entry_auto">Auto</string>
    <string name="pref_camera_flashmode_entry_on">On</string>
    <string name="pref_camera_flashmode_entry_off">Off</string>
    <string name="pref_camera_video_flashmode_default">off</string>
    <string name="pref_camera_whitebalance_default">auto</string>
    <string name="pref_camera_whitebalance_title">White balance</string>
    <string name="pref_camera_whitebalance_entry_auto">Auto</string>
    <string name="pref_camera_whitebalance_entry_incandescent">Incandescent</string>
    <string name="pref_camera_whitebalance_entry_daylight">Daylight</string>
    <string name="pref_camera_whitebalance_entry_fluorescent">Fluorescent</string>
    <string name="pref_camera_whitebalance_entry_cloudy">Cloudy</string>
    <string name="pref_camera_coloreffect_default">none</string>
    <string name="pref_camera_coloreffect_title">Color effect</string>
    <string name="pref_camera_coloreffect_entry_none">None</string>
    <string name="pref_camera_coloreffect_entry_antique">Antique</string>
    <string name="pref_camera_coloreffect_entry_lomocold">Lomo cold</string>
    <string name="pref_camera_coloreffect_entry_lomowarm">Lomo warm</string>
    <string name="pref_camera_coloreffect_entry_depthoffield">Depth of field</string>
    <string name="pref_camera_coloreffect_entry_negative">Negative</string>
    <string name="pref_camera_coloreffect_entry_solarize">Solarize</string>
    <string name="pref_camera_coloreffect_entry_posterize">Posterize</string>
    <string name="pref_camera_coloreffect_entry_aqua">Aqua</string>
    <string name="pref_camera_coloreffect_entry_mono">Mono</string>
    <string name="pref_camera_coloreffect_entry_emboss">Emboss</string>
    <string name="pref_camera_coloreffect_entry_sketch_gray">Sketch gray</string>
    <string name="pref_camera_coloreffect_entry_mosaic">Mosaic</string>
    <string name="pref_camera_coloreffect_entry_sepia">Sepia</string>
    <string name="pref_camera_touchafaec_default">touch-off</string>
    <string name="pref_camera_touchafaec_title">Touch AF/AEC</string>
    <string name="pref_camera_touchafaec_entry_off">Off</string>
    <string name="pref_camera_touchafaec_entry_on">On</string>
    <string name="pref_camera_contrast_entry_level0">Level 0</string>
    <string name="pref_camera_contrast_entry_level1">Level 1</string>
    <string name="pref_camera_contrast_entry_level2">Level 2</string>
    <string name="pref_camera_contrast_entry_level3">Level 3</string>
    <string name="pref_camera_contrast_entry_level4">Level 4</string>
    <string name="pref_camera_contrast_entry_level5">Level 5(Default)</string>
    <string name="pref_camera_contrast_entry_level6">Level 6</string>
    <string name="pref_camera_contrast_entry_level7">Level 7</string>
    <string name="pref_camera_contrast_entry_level8">Level 8</string>
    <string name="pref_camera_contrast_entry_level9">Level 9</string>
    <string name="pref_camera_contrast_entry_level10">Level 10</string>
    <string name="pref_camera_saturation_entry_level0">Level 0</string>
    <string name="pref_camera_saturation_entry_level1">Level 1</string>
    <string name="pref_camera_saturation_entry_level2">Level 2</string>
    <string name="pref_camera_saturation_entry_level3">Level 3</string>
    <string name="pref_camera_saturation_entry_level4">Level 4</string>
    <string name="pref_camera_saturation_entry_level5">Level 5(Default)</string>
    <string name="pref_camera_saturation_entry_level6">Level 6</string>
    <string name="pref_camera_saturation_entry_level7">Level 7</string>
    <string name="pref_camera_saturation_entry_level8">Level 8</string>
    <string name="pref_camera_saturation_entry_level9">Level 9</string>
    <string name="pref_camera_saturation_entry_level10">Level 10</string>
    <string name="pref_camera_contrast_default">2</string>
    <string name="pref_camera_contrast_title">Contrast</string>
    <string name="pref_camera_saturation_title">Saturation</string>
    <string name="pref_camera_saturation_default">2</string>
    <string name="pref_exposure_title">Exposure</string>
    <string name="pref_exposure_default">0</string>
    <string name="pref_camera_brightness_default">2</string>
    <string name="pref_camera_brightness_title">Brightness</string>
    <string name="pref_camera_scenemode_default">auto</string>
    <string name="pref_camera_scenemode_title">Scene mode</string>
    <string name="pref_camera_scenemode_entry_off">Off</string>
    <string name="pref_camera_scenemode_entry_auto">Auto</string>
    <string name="pref_camera_scenemode_entry_action">Action</string>
    <string name="pref_camera_scenemode_entry_portrait">Portrait</string>
    <string name="pref_camera_scenemode_entry_landscape">Landscape</string>
    <string name="pref_camera_scenemode_entry_night">Night</string>
    <string name="pref_camera_scenemode_entry_night_portrait">Night portrait</string>
    <string name="pref_camera_continuousaf_title">Continuous AF</string>
    <string name="pref_camera_continuousaf_default">caf-off</string>
    <string name="pref_camera_hdr_title">HDR</string>
    <string name="pref_camera_hdr_save_default">off</string>
    <string name="pref_camera_iso_default">auto</string>
    <string name="pref_camera_iso_title">ISO</string>
    <string name="pref_camera_facedetection_default">on</string>
    <string name="pref_camera_facedetection_title">Face detection</string>
    <string name="gps_title">GPS tag</string>
    <string name="pref_camera_gps_default">off</string>
    <string name="pref_camera_timer_default">0</string>
    <string name="pref_camera_timer_title">Timer</string>
    <string name="pref_camera_save_location_title">Preferred save location</string>
    <string name="pref_camera_save_location_default">memoryscard</string>
    <string name="pref_camera_shootmode_title">Shooting mode</string>
    <string name="pref_camera_shootmode_default">single</string>
    <string name="pref_camera_redeye_reduction_title">Red eye reduction</string>
    <string name="pref_camera_redeye_reduction_default">off</string>
    <string name="pref_camera_steady_video_title">Stabilizer</string>
    <string name="pref_camera_steady_video_default">off</string>
    <string name="pref_camera_grid_title">Grid</string>
    <string name="pref_camera_grid_default">off</string>
    <string name="pref_camera_autofocus_title">Auto focus</string>
    <string name="pref_camera_autofocus_default">on</string>
    <string name="pref_camera_distortion_title">Distortion</string>
    <string name="pref_camera_distortion_default">none</string>
    <string name="pref_camera_review_title">Review</string>
    <string name="pref_camera_review_default">0</string>
    <string name="shutter_sound_title">Shutter Sound</string>
    <string name="pref_camera_shutter_sound_default">on</string>
    <string name="pref_camera_antibanding_default">auto</string>
    <string name="pref_camera_antibanding_title">Antibanding</string>
</resources>