<?xml version="1.0" encoding="utf-8"?>
<PreferenceGroup
  xmlns:camera="http://schemas.android.com/apk/res/com.android.hwcamera">
    <PreferenceGroup camera:title="@string/pref_camera_settings_category">
        <IconListPreference camera:title="@string/pref_camera_flashmode_title" camera:key="pref_camera_flashmode_key" camera:defaultValue="@string/pref_camera_flashmode_default" camera:entryValues="@array/pref_camera_flashmode_entryvalues" camera:entries="@array/pref_camera_flashmode_entries" camera:icons="@array/pref_camera_flashmode_icons" camera:largeIcons="@array/flashmode_icons" />
        <ListPreference camera:title="@string/pref_exposure_title" camera:key="pref_camera_exposure_key" camera:defaultValue="@string/pref_exposure_default" />
        <ListPreference camera:title="@string/pref_camera_scenemode_title" camera:key="pref_camera_scenemode_key" camera:defaultValue="@string/pref_camera_scenemode_default" camera:entryValues="@array/pref_camera_scenemode_entryvalues" camera:entries="@array/pref_camera_scenemode_entries" />
        <IconListPreference camera:title="@string/pref_camera_whitebalance_title" camera:key="pref_camera_whitebalance_key" camera:defaultValue="@string/pref_camera_whitebalance_default" camera:entryValues="@array/pref_camera_whitebalance_entryvalues" camera:entries="@array/pref_camera_whitebalance_entries" camera:icons="@array/prf_camera_whitebalance_icons" camera:largeIcons="@array/prf_camera_whitebalance_icons" />
        <IconListPreference camera:title="@string/pref_camera_coloreffect_title" camera:key="pref_camera_coloreffect_key" camera:defaultValue="@string/pref_camera_coloreffect_default" camera:entryValues="@array/pref_camera_coloreffect_entryvalues" camera:entries="@array/pref_camera_coloreffect_entries" camera:icons="@array/coloreffect_icons" camera:largeIcons="@array/coloreffect_icons" />
        <ListPreference camera:title="@string/pref_camera_picturesize_title" camera:key="pref_camera_picturesize_key" camera:entryValues="@array/pref_camera_picturesize_entryvalues" camera:entries="@array/pref_camera_picturesize_entries" />
        <ListPreference camera:title="@string/pref_camera_jpegquality_title" camera:key="pref_camera_jpegquality_key" camera:defaultValue="@string/pref_camera_jpegquality_default" camera:entryValues="@array/pref_camera_jpegquality_entryvalues" camera:entries="@array/pref_camera_jpegquality_entries" />
        <IconListPreference camera:title="@string/pref_camera_id_title" camera:key="pref_camera_id_key" camera:defaultValue="@string/pref_camera_id_default" />
        <ListPreference camera:title="@string/pref_camera_touchafaec_title" camera:key="pref_camera_touchafaec_key" camera:defaultValue="@string/pref_camera_touchafaec_default" camera:entryValues="@array/pref_camera_touchafaec_entryvalues" camera:entries="@array/pref_camera_touchafaec_entries" />
        <ListPreference camera:title="@string/pref_camera_iso_title" camera:key="pref_camera_iso_key" camera:defaultValue="@string/pref_camera_iso_default" camera:entryValues="@array/pref_camera_iso_entryvalues" camera:entries="@array/pref_camera_iso_entries" />
        <ListPreference camera:title="@string/pref_camera_contrast_title" camera:key="pref_camera_contrast_key" camera:defaultValue="@string/pref_camera_contrast_default" camera:entryValues="@array/pref_camera_multilevel_entryvalues" camera:entries="@array/pref_camera_contrast_entries" />
        <ListPreference camera:title="@string/pref_camera_saturation_title" camera:key="pref_camera_saturation_key" camera:defaultValue="@string/pref_camera_saturation_default" camera:entryValues="@array/pref_camera_multilevel_entryvalues" camera:entries="@array/pref_camera_saturation_entries" />
        <ListPreference camera:title="@string/pref_camera_brightness_title" camera:key="pref_camera_brightness_key" camera:defaultValue="@string/pref_camera_brightness_default" camera:entryValues="@array/pref_camera_multilevel_entryvalues" camera:entries="@array/pref_camera_brightness_entries" />
        <ListPreference camera:title="@string/pref_camera_facedetection_title" camera:key="pref_camera_facedetection_key" camera:defaultValue="@string/pref_camera_facedetection_default" camera:entryValues="@array/pref_camera_facedetection_entryvalues" camera:entries="@array/pref_camera_facedetection_entries" />
        <ListPreference camera:title="@string/pref_picturesize_camera_widescreen_title" camera:key="pref_camera_picture_widescreen_key" camera:entryValues="@array/pref_camera_picturesize_widescreen_entryvalues" camera:entries="@array/pref_camera_picturesize_widescreen_entries" />
        <IconListPreference camera:title="@string/pref_camera_shootmode_title" camera:key="pref_camera_shootmode_key" camera:defaultValue="@string/pref_camera_shootmode_default" camera:entryValues="@array/pref_camera_shootmode_entryvalue" camera:entries="@array/pref_camera_shootmode_entries" camera:icons="@array/shootmode_icons" camera:largeIcons="@array/shootmode_icons" />
        <ListPreference camera:title="@string/pref_camera_redeye_reduction_title" camera:key="pref_camera_redeyedetection_key" camera:defaultValue="@string/pref_camera_redeye_reduction_default" camera:entryValues="@array/pref_camera_redeye_reduction_entryvalue" camera:entries="@array/pref_camera_redeye_reduction_entries" />
        <ListPreference camera:title="@string/pref_camera_grid_title" camera:key="pref_camera_grid_key" camera:defaultValue="@string/pref_camera_grid_default" camera:entryValues="@array/pref_camera_grid_entryvalue" camera:entries="@array/pref_camera_grid_entries" />
        <ListPreference camera:title="@string/pref_camera_hdr_title" camera:key="pref_camera_hdr_save_mode" camera:defaultValue="@string/pref_camera_hdr_save_default" camera:entryValues="@array/pref_camera_hdr_entryvalue" camera:entries="@array/pref_camera_hdr_entries" />
        <ListPreference camera:title="@string/pref_camera_save_location_title" camera:key="pref_camera_save_location_key" camera:defaultValue="@string/pref_camera_save_location_default" camera:entryValues="@array/pref_camera_save_location_entryvalue" camera:entries="@array/pref_camera_save_location_entries" />
        <ListPreference camera:title="@string/pref_camera_autofocus_title" camera:key="pref_camera_auto_focusmode_key" camera:defaultValue="@string/pref_camera_autofocus_default" camera:entryValues="@array/pref_camera_auto_focusmode_entryvalue" camera:entries="@array/pref_camera_auto_focusmode_entryentries" />
        <ListPreference camera:title="@string/pref_camera_timer_title" camera:key="pref_camera_timer_key" camera:defaultValue="@string/pref_camera_timer_default" camera:entryValues="@array/pref_camera_timer_entryvalues" camera:entries="@array/pref_camera_timer_entries" />
        <IconListPreference camera:title="@string/pref_camera_distortion_title" camera:key="pref_camera_distortion_key" camera:defaultValue="@string/pref_camera_distortion_default" camera:entryValues="@array/pref_camera_distortion_entryvalues" camera:entries="@array/pref_camera_distortion_entries" camera:icons="@array/pref_camera_distortion_icons" camera:largeIcons="@array/pref_camera_distortion_largeicons" />
        <ListPreference camera:title="@string/pref_camera_review_title" camera:key="pref_camera_review_key" camera:defaultValue="@string/pref_camera_review_default" camera:entryValues="@array/pref_camera_review_entryvalues" camera:entries="@array/pref_camera_review_entries" />
        <ListPreference camera:title="@string/gps_title" camera:key="pref_camera_gps_key" camera:defaultValue="@string/pref_camera_gps_default" camera:entryValues="@array/pref_camera_gps_entryenvalues" camera:entries="@array/pref_camera_gps_entryentries" />
        <ListPreference camera:title="@string/shutter_sound_title" camera:key="pref_camera_shutter_sound_key" camera:defaultValue="@string/pref_camera_shutter_sound_default" camera:entryValues="@array/pref_camera_shutter_sound_entryenvalues" camera:entries="@array/pref_camera_shutter_sound_entryentries" />
        <ListPreference camera:title="@string/pref_camera_antibanding_title" camera:key="pref_camera_antibanding_key" camera:defaultValue="@string/pref_camera_antibanding_default" camera:entryValues="@array/pref_camera_antibanding_entryvalues" camera:entries="@array/pref_camera_antibanding_entries" />
    </PreferenceGroup>
</PreferenceGroup>
