<?xml version="1.0" encoding="utf-8"?>
<PreferenceGroup
  xmlns:camera="http://schemas.android.com/apk/res/com.android.hwcamera">
    <PreferenceGroup camera:title="@string/pref_camcorder_settings_category">
        <IconListPreference camera:title="@string/pref_video_quality_title" camera:key="pref_video_quality_key" camera:entryValues="@array/pref_video_quality_entryvalues" camera:entries="@array/pref_video_quality_entries" camera:icons="@array/video_quality_largeicons" camera:largeIcons="@array/video_quality_largeicons" />
        <IconListPreference camera:title="@string/pref_camera_flashmode_title" camera:key="pref_camera_video_flashmode_key" camera:defaultValue="@string/pref_camera_video_flashmode_default" camera:entryValues="@array/pref_camera_video_flashmode_entryvalues" camera:entries="@array/pref_camera_video_flashmode_entries" camera:icons="@array/pref_camera_flashmode_icons" camera:largeIcons="@array/flashmode_icons" />
        <IconListPreference camera:title="@string/pref_camera_whitebalance_title" camera:key="pref_video_whitebalance_key" camera:defaultValue="@string/pref_camera_whitebalance_default" camera:entryValues="@array/pref_camera_whitebalance_entryvalues" camera:entries="@array/pref_camera_whitebalance_entries" camera:icons="@array/prf_camera_whitebalance_icons" camera:largeIcons="@array/prf_camera_whitebalance_icons" />
        <IconListPreference camera:title="@string/pref_camera_coloreffect_title" camera:key="pref_video_coloreffect_key" camera:defaultValue="@string/pref_camera_coloreffect_default" camera:entryValues="@array/pref_camera_coloreffect_entryvalues" camera:entries="@array/pref_camera_coloreffect_entries" camera:icons="@array/coloreffect_icons" camera:largeIcons="@array/coloreffect_icons" />
        <IconListPreference camera:title="@string/pref_camera_id_title" camera:key="pref_camera_id_key" camera:defaultValue="@string/pref_camera_id_default" />
        <ListPreference camera:title="@string/pref_camera_videosize_title" camera:key="pref_camera_videosize_key" camera:defaultValue="@string/pref_camera_videosize_default" camera:entryValues="@array/pref_camera_videosize_entryvalues" camera:entries="@array/pref_camera_videosize_entries" />
        <ListPreference camera:title="@string/pref_camera_continuousaf_title" camera:key="pref_camera_continuousaf_key" camera:defaultValue="@string/pref_camera_continuousaf_default" camera:entryValues="@array/pref_camera_continuousaf_entryvalues" camera:entries="@array/pref_camera_continuousaf_entries" />
        <ListPreference camera:title="@string/pref_camera_save_location_title" camera:key="pref_camera_save_location_key" camera:defaultValue="@string/pref_camera_save_location_default" camera:entryValues="@array/pref_camera_save_location_entryvalue" camera:entries="@array/pref_camera_save_location_entries" />
        <IconListPreference camera:title="@string/pref_camera_distortion_title" camera:key="pref_video_distortion_key" camera:defaultValue="@string/pref_camera_distortion_default" camera:entryValues="@array/pref_camera_distortion_entryvalues" camera:entries="@array/pref_camera_distortion_entries" camera:icons="@array/pref_camera_distortion_icons" camera:largeIcons="@array/pref_camera_distortion_largeicons" />
        <ListPreference camera:title="@string/gps_title" camera:key="pref_video_gps_key" camera:defaultValue="@string/pref_camera_timer_default" camera:entryValues="@array/pref_camera_gps_entryenvalues" camera:entries="@array/pref_camera_gps_entryentries" />
        <ListPreference camera:title="@string/pref_camera_review_title" camera:key="pref_videocamera_review_key" camera:defaultValue="@string/pref_camera_review_default" camera:entryValues="@array/pref_camera_review_entryvalues" camera:entries="@array/pref_camera_review_entries" />
        <ListPreference camera:title="@string/pref_camera_steady_video_title" camera:key="pref_camera_steady_video_key" camera:defaultValue="@string/pref_camera_steady_video_default" camera:entryValues="@array/pref_camera_steady_video_entryvalue" camera:entries="@array/pref_camera_steady_video_entries" />
        <ListPreference camera:title="@string/shutter_sound_title" camera:key="pref_video_shutter_sound_key" camera:defaultValue="@string/pref_camera_shutter_sound_default" camera:entryValues="@array/pref_camera_shutter_sound_entryenvalues" camera:entries="@array/pref_camera_shutter_sound_entryentries" />
        <ListPreference camera:title="@string/pref_video_quality_title" camera:key="pref_video_quality_level_key" camera:defaultValue="@string/pref_video_quality_level_default" camera:entryValues="@array/pref_video_quality_level_entryvalues" camera:entries="@array/pref_video_quality_level_entries" />
        <ListPreference camera:title="@string/pref_camera_antibanding_title" camera:key="pref_video_antibanding_key" camera:defaultValue="@string/pref_camera_antibanding_default" camera:entryValues="@array/pref_camera_antibanding_entryvalues" camera:entries="@array/pref_camera_antibanding_entries" />
    </PreferenceGroup>
</PreferenceGroup>
