<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/rotateSeekBarPopupWindow" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/imageexposurelayout" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pref_exposure_title" />
        <LinearLayout android:gravity="center" android:orientation="vertical" android:paddingLeft="20.0dip" android:paddingTop="2.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <SeekBar android:id="@id/Image_Exposure_seekbar" style="@style/SeekBarStyle" />
            <LinearLayout android:orientation="horizontal" android:paddingLeft="6.0dip" android:paddingTop="2.0dip" android:paddingRight="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:id="@id/exposure_begin" android:layout_weight="1.0" style="@style/SeekBarScaleStyle" />
                <TextView android:id="@id/exposure_middle" android:layout_weight="1.0" style="@style/SeekBarScaleStyle" />
                <TextView android:id="@id/exposure_end" style="@style/SeekBarScaleStyle" />
            </LinearLayout>
        </LinearLayout>
        <ImageView android:gravity="fill_horizontal" android:background="?android:windowBackground" android:layout_width="fill_parent" android:layout_height="2.0dip" android:src="@drawable/divider_vertical_dark" android:scaleType="fitXY" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/imagesaturationlayout" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pref_camera_saturation_title" />
        <LinearLayout android:gravity="center" android:orientation="vertical" android:paddingLeft="20.0dip" android:paddingTop="2.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <SeekBar android:id="@id/Image_saturation_seekbar" android:progress="0" style="@style/SeekBarStyle" />
            <LinearLayout android:orientation="horizontal" android:paddingLeft="6.0dip" android:paddingTop="2.0dip" android:paddingRight="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:id="@id/saturation_begin" android:layout_weight="1.0" style="@style/SeekBarScaleStyle" />
                <TextView android:id="@id/saturation_middle" android:layout_weight="1.0" style="@style/SeekBarScaleStyle" />
                <TextView android:id="@id/saturation_end" style="@style/SeekBarScaleStyle" />
            </LinearLayout>
        </LinearLayout>
        <ImageView android:gravity="fill_horizontal" android:background="?android:windowBackground" android:layout_width="fill_parent" android:layout_height="2.0dip" android:src="@drawable/divider_vertical_dark" android:scaleType="fitXY" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/imagecontrastlayout" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pref_camera_contrast_title" />
        <LinearLayout android:gravity="center" android:orientation="vertical" android:paddingLeft="20.0dip" android:paddingTop="2.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <SeekBar android:id="@id/Image_Contrast_seekbar" android:progress="0" style="@style/SeekBarStyle" />
            <LinearLayout android:orientation="horizontal" android:paddingLeft="6.0dip" android:paddingTop="2.0dip" android:paddingRight="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:id="@id/contrast_begin" android:layout_weight="1.0" style="@style/SeekBarScaleStyle" />
                <TextView android:id="@id/contrast_middle" android:layout_weight="1.0" style="@style/SeekBarScaleStyle" />
                <TextView android:id="@id/contrast_end" style="@style/SeekBarScaleStyle" />
            </LinearLayout>
        </LinearLayout>
        <ImageView android:gravity="fill_horizontal" android:background="?android:windowBackground" android:layout_width="fill_parent" android:layout_height="2.0dip" android:src="@drawable/divider_vertical_dark" android:scaleType="fitXY" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/imagebrightnesslayout" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pref_camera_brightness_title" />
        <LinearLayout android:gravity="center" android:orientation="vertical" android:paddingLeft="20.0dip" android:paddingTop="2.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <SeekBar android:id="@id/Image_brightness_seekbar" android:progress="0" style="@style/SeekBarStyle" />
            <LinearLayout android:orientation="horizontal" android:paddingLeft="6.0dip" android:paddingTop="2.0dip" android:paddingRight="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:id="@id/brightness_begin" android:layout_weight="1.0" style="@style/SeekBarScaleStyle" />
                <TextView android:id="@id/brightness_middle" android:layout_weight="1.0" style="@style/SeekBarScaleStyle" />
                <TextView android:id="@id/brightness_end" style="@style/SeekBarScaleStyle" />
            </LinearLayout>
        </LinearLayout>
        <ImageView android:gravity="fill_horizontal" android:background="?android:windowBackground" android:layout_width="fill_parent" android:layout_height="2.0dip" android:src="@drawable/divider_vertical_dark" android:scaleType="fitXY" />
    </LinearLayout>
</LinearLayout>
